[tool.poetry]
name = "cache_house"
version = "0.1.8"
description = "Caching tool for python"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/Turall/cache-house"
repository = "https://github.com/Turall/cache-house"
authors = ["Tural Muradov <tural_m@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
redis = "^4.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^21.12b0", allow-prereleases = true}
pytest-asyncio = "^0.16.0"
pytest-mock = "^3.6.1"
flake8 = "^4.0.1"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
