[tool.poetry]
name = "cache_house"
version = "1.0.1"
description = "Caching tool for python"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/Turall/cache-house"
repository = "https://github.com/Turall/cache-house"
authors = ["Tural Muradov <tural_m@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
redis = "^7.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "black (>=25.11.0,<26.0.0)",
    "fakeredis (>=2.32.1,<3.0.0)"
]
